# easyarm_ws

./: .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  CONTROL_ROADMAP.md  README.md
docs/: xhumanoid.md
scripts/: can.sh  can_fd.sh  decode_debug_log.sh  launch_h0616_demo.sh  safe_shutdown_easyarm.sh  switch_controller_mode.sh
src/easyarm_a1_bringup/: README.md  package.xml  setup.cfg  setup.py
src/easyarm_a1_bringup/easyarm_a1_bringup/: safe_shutdown_motion.py
src/easyarm_a1_bringup/launch/: bringup.launch.py
src/easyarm_a1_bringup/scripts/: safe_shutdown.sh
src/easyarm_a1_h0616_moveit_config/: CMakeLists.txt  package.xml
src/easyarm_a1_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/easyarm_a1_moveit_config/config/: EasyARM-A1.ros2_control.xacro  EasyARM-A1.srdf  EasyARM-A1.urdf.xacro  easyarm_a1.ros2_control.xacro  easyarm_a1.srdf  easyarm_a1.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_servo.yaml  ros2_controllers.yaml
src/easyarm_a1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/easyarm_a1_moveit_config/scripts/: safe_shutdown_demo.sh
src/easyarm_a1_moveit_config/src/: move_to_ready.cpp  switch_controller_mode.cpp
src/easyarm_app/: README.md  package.xml  setup.cfg  setup.py
src/easyarm_calib/: README.md  package.xml  setup.cfg  setup.py
src/easyarm_calib/easyarm_calib/: calibrate_camera.py  camera_preview.py  collect_joint_zero_vision.py  joint_zero_vision_common.py  optimize_joint_zero_vision.py
src/easyarm_can/: CMakeLists.txt  package.xml
src/easyarm_can/example/: test_xhumanoid.cpp
src/easyarm_can/include/easyarm_can/: driver_factory.hpp  easyarm_can.hpp  encoding.hpp  model_registry.hpp  motor_driver.hpp  protocols.hpp  socket_can_transport.hpp  types.hpp
src/easyarm_can/include/easyarm_can/drivers/: jxservo_driver.hpp  ti5robot_driver.hpp  xhumanoid_driver.hpp
src/easyarm_can/ref/xhumanoid/: HRA关节模组扭矩系数及电流计算公式.md
src/easyarm_can/src/: driver_factory.cpp  easyarm_can.cpp  encoding.cpp  model_registry.cpp  protocols.cpp  socket_can_transport.cpp
src/easyarm_can/src/jxservo/: jxservo_driver.cpp
src/easyarm_can/src/ti5robot/: ti5robot_driver.cpp
src/easyarm_can/src/vendors/jxservo/: jxservo_driver.cpp
src/easyarm_can/src/vendors/ti5robot/: ti5robot_driver.cpp
src/easyarm_can/src/vendors/xhumanoid/: xhumanoid_driver.cpp
src/easyarm_can/src/xhumanoid/: xhumanoid_driver.cpp
src/easyarm_controller/: CMakeLists.txt  PLAN.md  README.md  easyarm_controller_plugins.xml  package.xml
src/easyarm_controller/include/easyarm_controller/: dynamics_provider.hpp  easyarm_drag_controller.hpp  easyarm_freedrive_controller.hpp  easyarm_servo_controller.hpp  joint_motion_control_command.hpp
src/easyarm_controller/src/: dynamics_provider.cpp  easyarm_drag_controller.cpp  easyarm_freedrive_controller.cpp  easyarm_servo_controller.cpp  joint_motion_control_command.cpp
src/easyarm_description/: CMakeLists.txt  README.md  package.xml
src/easyarm_dynamics/: CMakeLists.txt  README.md  package.xml
src/easyarm_dynamics/calibration/: mass_com_calibration.py
src/easyarm_dynamics/include/easyarm_dynamics/: robot_model.hpp
src/easyarm_dynamics/src/: robot_model.cpp
src/easyarm_hardware/: CMakeLists.txt  README.md  easyarm_hardware.xml  package.xml
src/easyarm_hardware/easyarm_hardware/: __init__.py  debug_log_reader.py
src/easyarm_hardware/include/easyarm_hardware/: debug_logger.hpp  easyarm_hardware.hpp
src/easyarm_hardware/scripts/: decode_debug_log.py
src/easyarm_hardware/src/: debug_logger.cpp  easyarm_hardware.cpp  easyarm_hardware_debug.cpp
src/easyarm_motion_server/: CMakeLists.txt  PLAN.md  README.md  package.xml
src/easyarm_motion_server/include/easyarm_motion_server/: hardware_mode_client.hpp  hold_trajectory_sender.hpp  joint_state_cache.hpp  motion_context.hpp  motion_server_node.hpp  moveit_motion_executor.hpp  moveit_servo_executor.hpp  moveit_servo_runtime.hpp  position_servo_executor.hpp  trajectory_sender.hpp
src/easyarm_motion_server/launch/: h0616.launch.py
src/easyarm_motion_server/src/: easyarm_motion_server.cpp  hardware_mode_client.cpp  hold_trajectory_sender.cpp  joint_state_cache.cpp  main.cpp  motion_server_node.cpp  moveit_motion_executor.cpp  moveit_servo_executor.cpp  moveit_servo_runtime.cpp  position_servo_executor.cpp  trajectory_sender.cpp
src/easyarm_move_task/: CMakeLists.txt  README.md  package.xml
src/easyarm_move_task/include/easyarm_move_task/: controller_mode_utils.hpp
src/easyarm_move_task/scripts/: easyarm_replay_rviz.py  safe_shutdown_demo.sh
src/easyarm_move_task/src/: easyarm_playback.cpp  easyarm_record.cpp  move_to_ready.cpp  switch_controller_mode.cpp
src/easyarm_utils/: README.md  package.xml  setup.cfg  setup.py
src/easyarm_utils/easyarm_utils/: keyboard_teleop.py  plot_ee_trajectory.py  smooth_trajectory.py
src/easyarm_web_bridge/: README.md  package.xml  setup.cfg  setup.py
src/easyarm_web_bridge/easyarm_web_bridge/: server.py
src/easyarm_web_bridge/launch/: web_bridge.launch.py
src/jxservo_can/: CMakeLists.txt  README.md  package.xml
src/jxservo_can/docs/: can_protocol.md  error_codes.md  mit_mode.md
src/jxservo_can/include/jxservo_can/: jxservo_can_driver.hpp
src/jxservo_can/src/: jxservo_can_driver.cpp
src/robstride_can/: CMakeLists.txt  README.md  package.xml
src/robstride_can/include/robstride_can/: robstride_can_driver.hpp
src/robstride_can/src/: discover_motors.cpp  robstride_can_driver.cpp  set_zero_pos.cpp  single_motor_csp_demo.cpp  single_motor_demo.cpp
src/robstride_can/test/: plot_csp_csv.py
src/ti5robot_can/: CMakeLists.txt  package.xml
src/ti5robot_can/docs/: can_protocol.md
src/ti5robot_can/include/ti5robot_can/: ti5robot_can_driver.hpp
src/ti5robot_can/src/: ti5robot_can_driver.cpp
web_app/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+122 files in other folders)
