<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easyarm_a1_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files for the EasyArm A1 robot.</description>
  <maintainer email="fanbinjim@qq.com">linx</maintainer>
  <license>BSD</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>moveit_configs_utils</depend>
  <depend>easyarm_a1_h0616_moveit_config</depend>
  <depend>easyarm_description</depend>
  <depend>easyarm_hardware</depend>
  <depend>easyarm_motion_server</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
