<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easyarm_web_bridge</name>
  <version>0.0.0</version>
  <description>ROS 2 HTTP and WebSocket backend bridge for EasyArm motion debugging.</description>
  <maintainer email="fanbinjim@qq.com">linx</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>easyarm_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
